# node-controller-rust

./: .env.example  .gitignore  Cargo.toml  INSTALL_MACOS.md  RDMA_TESTING.md  README.md  TESTING_DISCOVERY.md  build.rs  com.nodecontroller.daemon.plist  deploy.sh  install.sh  node-controller.service  node-monitor  openapi.yaml  org.a14a.node-controller.plist  test_discovery.sh  test_file_transfer.sh  test_grpc.sh  test_rdma.sh  test_rdma_compat.sh  uninstall.sh
proto/: node_service.proto
src/: lib.rs  main.rs
src/api/: client.rs  mod.rs  models.rs
src/metrics/: mod.rs
src/metrics/cpu/: collector.rs  mod.rs  types.rs
src/metrics/network/: collector.rs  mod.rs  types.rs
src/metrics/storage/: collector.rs  mod.rs  types.rs
src/metrics/system/: collector.rs  mod.rs  types.rs
src/networking/: README.md  communication.rs  discovery.rs  file_transfer.rs  interface.rs  mod.rs
src/updater/: backup.rs  download.rs  github.rs  health.rs  mod.rs  version.rs
