[package]
name = "node-controller-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.30.5", features = ["serde"] }  # For system information
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"  # For JSON handling
anyhow = "1.0"  # For error handling
tokio = { version = "1.36", features = ["full"] }  # For async runtime
chrono = { version = "0.4", features = ["serde"] }  # For timestamp handling
uuid = { version = "1.7", features = ["v4", "serde"] }  # For unique IDs
ctrlc = "3.4"  # For signal handling
reqwest = { version = "0.11", features = ["json", "stream"] }  # For HTTP requests
log = "0.4"  # For logging
env_logger = "0.10"  # For logging configuration
dotenv = "0.15.0"  # For loading .env files
futures-util = "0.3"  # For working with futures
tempfile = "3.8"  # For temporary files
dirs = "5.0"  # For finding user directories
hostname = "0.3.1"  # For getting the system hostname

# Node discovery and communication dependencies
mdns-sd = "0.9.1"  # For mDNS service discovery
if-addrs = "0.7.0"  # For network interface detection
local-ip-address = "0.5.6"  # For determining local IP addresses
async-trait = "0.1.77"  # For async traits

# gRPC communication dependencies
tonic = "0.10"  # gRPC framework
prost = "0.12"  # Protocol buffers implementation
tokio-stream = { version = "0.1", features = ["net"] }  # For streaming interfaces

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Strip symbols from binary

[package.metadata.macos]
minimum_system_version = "11.0"

[build-dependencies]
tonic-build = "0.10"  # For compiling protocol buffers 